samples/_failures_safe/1761126937_f3613d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_057b5984.c: In function ‘main’:
./samples/SAFE/__tmp_057b5984.c:165:5: error: expected declaration or statement at end of input
  165 |     init_parser(&state, input_buffer);
      |     ^~~~~~~~~~~
